# Medical_KG

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_UNIFICATION_ROADMAP.md  CLI_UNIFICATION_SUMMARY.md  CONTRIBUTING.md  LEGACY_RETIREMENT_COMPLETE.md  LEGACY_RETIREMENT_SUMMARY.md  Medical_KG.code-workspace  README.md  REFACTOR_FOLLOWUP_PROPOSALS.md  REPOSITORY_OPTIMIZATION_COMPLETE.md  REPOSITORY_OPTIMIZATION_PROPOSALS.md  REPOSITORY_OPTIMIZATION_STATUS.md  REPO_REVIEW_PROPOSALS_SUMMARY.md  TYPED_PAYLOADS_COMPLETE.md  TYPED_PAYLOADS_DOCUMENTATION_COMPLETE.md  codex1.patch  codex10.patch  codex11.patch  codex12.patch  codex13.patch  codex14.patch  codex15.patch  codex16.patch  codex17.patch  codex18.patch  codex19.patch  codex2.patch  codex20.patch  codex3.patch  codex4.patch  codex5.patch  codex6.patch  codex7.patch  codex8.patch  coverage_budget.json  coverage_missing.txt  (+3 more)
.github/workflows/: ci.yml  nightly-e2e.yml
.hypothesis/constants/: 001d118bf14aaccc  03d52c511ac2b77c  045f5d71c044d6fa  06f71392ec0b4bb3  099e691c6920dc93  0b4e57fbdbaa906a  0d127f3132a886cd  0f2292b2b23d88c9  10e130ba196a09e6  167e2e5e71ad1013  181ff4970e6e13a4  1ce426cd6b0f349d  1d702ff07e7bdfbe  213aa161d0f72be3  21fab923bf47a157  227b3918e4dc5fce  22db8ec8c3ffe7eb  22fb3ff8c3ff93c3  23cba0e9f9da310f  250713176c157b87  255a52341298afb2  25aab6bf01b12174  262a5ce07043538f  266d7b2183a7e4ac  26828b34027204e5  2739aa4528292797  28549a7228ccf224  293e81ec40200513  2984fa9adebb77ee  298ecd5fff03d418  2d962b250d1b39c3  2f0f73c90ebc3461  317e90483474345d  3335b713b3a56b57  343b215252160d04  3636e2be1fac5ca9  37271eb4344df512  377a6d55135120d2  38c6987a02aa13eb  3a64afb83bfefa8a  (+123 more)
.mypy_cache/: missing_stubs
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  (+302 more)
docs/: UI_PROPOSALS_INDEX.md  UI_PROPOSAL_SUMMARY.md  briefing.md  catalog_operations.md  chunking_profiles.md  clinical_extraction.md  config_schema_authoring.md  config_schema_migration.md  config_schema_reference.md  config_tuning.md  configuration.md  continuous_improvement.md  dependencies.md  deployment.md  embeddings_gpu.md  facet_generation.md  hot_reload.md  ingestion_cli_design_review.md  ingestion_cli_migration_guide.md  ingestion_cli_reference.md  ingestion_cli_rollout_plan.md  ingestion_cli_troubleshooting.md  ingestion_cli_validation_report.md  ingestion_runbooks.md  ingestion_typed_contracts.md  ir_pipeline.md  knowledge_graph.md  logging.md  operations_manual.md  repo_optimization_opportunities.md  repo_review.md  secrets_management.md  test_suite_cleanup.md  testing_strategy.md  type_safety.md
docs/archive/: README.md
docs/legacy/: retire_ir_legacy_fallbacks.md  run_async_legacy_retrospective.md
docs_outdated/: COMPLETE_PROPOSAL_SUMMARY.md  IMPLEMENTATION_ORDER.md  STATUS.md  VALIDATION_REPORT.md
openspec/: COMPLETION_SUMMARY.md  Overall_Project_Scope.md  QUICK_REFERENCE.md  Summary.md  data_connectors.md
openspec/changes/: FOLLOWUP_SUMMARY.md  IMPLEMENTATION_PLAN.md  LEGACY_RETIREMENT_SCOPES.md  TYPED_PAYLOADS_COMPLETE.md  TYPED_PAYLOADS_INDEX.md
ops/chaos/: chaos_tests.sh
ops/cost/: gpu_optimization.md  opensearch_ilm.yaml  retention_policies.md
ops/e2e/: run_verification.py
ops/load_test/: README.md  budget.yaml  check_thresholds.py  locustfile.py
ops/monitoring/: prometheus-alerts.yaml
ops/release/: 2025-10-remove-legacy-ingestion-cli.md  2025-10-remove-run-async-legacy.md  checklist.md  pipeline.md  signoff.md
ops/runbooks/: 01-hot-config-change.md  02-scale-retrieval.md  03-index-rebuild.md  04-gpu-node-failure.md  05-incident-response.md  06-catalog-refresh.md  07-datastore-failover.md  08-briefing-troubleshooting.md  09-ledger-maintenance.md
scripts/: check_streaming_migration.py  generate_config_docs.py  migrate_ledger_to_state_machine.py  validate_all_configs.py
scripts/archive/: README.md  migrate_ledger_to_state_machine.py
scripts/benchmarks/: ingestion_cli_benchmark.py  ledger_benchmark.py
scripts/cli_migration/: check_ci_commands.py  suggest_flag_migrations.py
scripts/ops/: ledger_audit.py
src/Medical_KG/: __init__.py  app.py  cli.py
src/Medical_KG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fastapi/: __init__.py  __init__.pyi  status.py
src/httpx/: __init__.py
src/jsonlines/: __init__.py
src/langdetect/: __init__.py
src/pydantic/: __init__.py  __init__.pyi
src/reportlab/: __init__.py
src/yaml/: __init__.py
stubs/: prometheus_client.pyi
stubs/opentelemetry/: __init__.pyi
stubs/pythonjsonlogger/: __init__.pyi  jsonlogger.pyi
tests/: __init__.py  conftest.py  conftest.py.rej  test_basic.py  test_cli_dependencies.py  test_entity_linking.py  test_ingestion_ledger_state_machine.py  test_pdf_pipeline.py  test_retrieval_service.py  test_streaming_migration.py
tests/api/: test_core_apis.py
tests/briefing/: test_formatters.py  test_service.py  test_synthesis.py
tests/catalog/: test_catalog_builder.py  test_concept_catalog.py  test_license_policy.py  test_normalization.py
tests/chunking/: test_chunking_pipeline.py  test_semantic_chunker.py
tests/common/: __init__.py  factories.py  mocks.py
tests/config/: test_cli.py  test_config_manager.py  test_schema_validator.py
(+14412 files in other folders)
