[project]
name = "Medical_KG"
version = "2.0.0"
description = "Production-ready Medical Knowledge Graph with GPU-accelerated processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # HTTP & Async
    "httpx[http2]==0.28.1",
    "tenacity==9.1.2",
    "aiolimiter==1.2.1",
    "anyio==4.11.0",
    "pytest-cov==4.1.0",
    "coverage==7.6.10",

    # CLI & UI
    "typer==0.17.5",
    "rich==14.1.0",
    "tqdm==4.67.1",

    # Data Models & Validation
    "python-dotenv==1.1.1",
    "pydantic==2.11.9",

    # Configuration & Schemas
    "jsonschema==4.25.1",
    "pyyaml==6.0.3",

    # JSON & Serialization
    "orjson==3.11.3",
    "jsonlines==4.0.0",

    # XML/HTML Parsing
    "lxml==6.0.2",
    "beautifulsoup4==4.14.2",
    "html5lib==1.1",
    "xmltodict==1.0.2",

    # RDF & SPARQL
    "rdflib==7.2.1",
    "SPARQLWrapper==2.0.0",

    # Authentication & Security
    "authlib==1.6.5",
    "cryptography==46.0.2",

    # Date & Time
    "python-dateutil==2.9.0.post0",

    # NLP & Text Processing
    "langdetect==1.0.9",
    "rapidfuzz==3.14.1",
    "spacy==3.7.5",
    "scispacy==0.5.5",
    "nltk==3.9.2",
    "chardet==5.2.0",
    "ftfy==6.3.1",
    "unidecode==1.4.0",

    # Machine Learning & Embeddings
    "torch==2.8.0+cu129",
    "transformers==4.56.2",
    "sentence-transformers==5.1.1",
    "scikit-learn==1.7.2",
    "numpy==2.2.6",
    "scipy==1.16.2",

    # Data Science
    "pandas==2.3.3",
    "pyarrow==21.0.0",

    # Databases & Storage
    "neo4j==6.0.2",
    "opensearch-py==3.0.0",
    "boto3==1.40.43",
    "redis==6.4.0",

    # APIs
    "fastapi==0.118.0",
    "uvicorn[standard]==0.37.0",
    "python-multipart==0.0.20",

    # SHACL & Validation
    "pyshacl==0.30.1",

    # Orchestration
    "prefect==3.4.20",

    # Monitoring & Observability
    "prometheus-client==0.23.1",
    "python-json-logger==3.3.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",

    # Caching
    "cachetools==6.2.0",

    # PDF Processing (GPU-only)
    "mineru==2.5.4",

    # LLM Serving (GPU-only)
    "vllm==0.10.2",
]

[project.optional-dependencies]
# Development and release engineering toolchain
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.98.0",

    # Code Quality
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",

    # Type Stubs
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
    "types-boto3>=1.34.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",

    # Debugging & Profiling
    "ipython>=8.21.0",
    "ipdb>=0.13.13",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
]

# Metrics, tracing, and exporter stack
observability = [
    "prometheus-client==0.23.1",
    "python-json-logger==3.3.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-exporter-otlp==1.37.0",
]

# PDF ingestion and parsing helpers
pdf = [
    "pypdf==6.1.1",
    "pdfminer.six==20250506",
    "pypdfium2==4.30.0",
]

# Dense and sparse embedding backends
embeddings = [
    "sentence-transformers==5.1.1",
    "sentencepiece==0.2.1",
    "faiss-cpu>=1.7.4",
]

# Token counting utilities
tokenization = [
    "tiktoken==0.11.0",
]

# spaCy runtime dependencies (models installed separately)
nlp = [
    "spacy==3.7.5",
]

# GPU-enabled pipelines
gpu = [
    "torch",
]

# HTTP client stack used by ingestion and telemetry
http = [
    "httpx==0.28.1",
]

# Redis caches for rate limiting and metadata
caching = [
    "redis==6.4.0",
]

# Load-testing utilities
load-testing = [
    "locust>=2.24.1",
]

# SpaCy model placeholders (download via python -m spacy download ...)
models = [
    # python -m spacy download en_core_sci_md
    # python -m spacy download en_core_web_sm
]

[project.scripts]
med = "Medical_KG.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "ops/load_test/",
    "ops/e2e/",
    "ops/chaos/",
]
mypy_path = ["stubs"]

[[tool.mypy.overrides]]
module = [
    "Medical_KG.config.manager",
    "Medical_KG.extraction.*",
    "Medical_KG.facets.*",
    "Medical_KG.security.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "pydantic",
    "typer",
    "bs4",
    "rich",
    "rich.*",
    "jsonschema",
    "jsonschema.*",
]
ignore_missing_imports = true
